# TTS

./: README.md  dockerfile  evaluate_models.py  main.py  makefile  pyproject.toml  requirements.txt
docs/: metricas_guia.md  resultados.md
scr/: __init__.py
scr/metrics/: __init__.py  metrics.py
scr/models/: coqui.py  xtts.py  yourtts.py
scr/sovits/: __init__.py  sovits.py
