[project]
name = "tts"
version = "0.1.0"
description = "Clonación de voz usando YourTTS y XTTS v2"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0,<2.3.0",
    "torchaudio>=2.0.0,<2.3.0",
    "TTS>=0.22.0",
    "transformers>=4.33.0,<4.37.0",
    "resemblyzer>=0.1.3",
    "soundfile>=0.12.0",
    "numpy>=1.22.0,<2.0.0",
    "librosa>=0.9.2",
    "tqdm>=4.65.0"
]